kubernetes/producao/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiap-pagamento-deployment
  labels:
    app: fiap-pagamento
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fiap-pagamento
  template:
    metadata:
      labels:
        app: fiap-pagamento
    spec:
      containers:
        - name: fiap-pagamento
          image: 841162698708.dkr.ecr.us-east-1.amazonaws.com/ms-payment:${GITHUB_SHA}
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
