kubernetes/producao/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiap-pagamento-ingress
spec:
  rules:
    - host: fiap-pagamento.example.com  # Substitua pelo domínio desejado
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fiap-pagamento-service
                port:
                  number: 80
